kubernetes/skywalker/cluster/istio/gateway/feldman-in.gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway

metadata:
  name: feldman-in
  namespace: cluster

spec:
  selector:
    istio: gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP2
      hosts:
        - "feldman.in"
        - "*.feldman.in"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "feldman.in"
        - "*.feldman.in"
      tls:
        mode: SIMPLE
        credentialName: feldman-in-tls
    - port:
        number: 5432
        name: tcp-postgres
        protocol: TCP
      hosts:
        - "*.feldman.in"
    - port:
        number: 3306
        name: tcp-mariadb
        protocol: TCP
      hosts:
        - "*.feldman.in"
    - port:
        number: 389
        name: tcp-ldap
        protocol: TCP
      hosts:
        - "*.feldman.in"
    - port:
        number: 636
        name: tcp-ldaps
        protocol: TCP
      hosts:
        - "*.feldman.in"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway

metadata:
  name: feldman-in

spec:
  gatewayClassName: istio
  listeners:
    - name: default
      hostname: "*.feldman.in"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: default
      hostname: "*.feldman.in"
      port: 443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
